# logtool

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  filereader.cpp  filewatcher.cpp  filewatcher.h  flog.h  linuxfilewatcher.cpp  linuxfilewatcher.h  logcat.cpp  logcat.h  logtool.pro  main.cpp  unix_color.h
app/: blacklistmanager.cpp  blacklistmanager.h  logcat.cpp  logcat.h  logtool.cpp  logtool.h  rs232reader.cpp  rs232reader.h
luautils/: luaoutputprinter.cpp  luaoutputprinter.h  luaunixcolor.cpp  luaunixcolor.h
scripts/: test.lua
utils/: filereader.h  filewatcher.cpp  filewatcher.h  flog.cpp  flog.h  linuxfilewatcher.cpp  linuxfilewatcher.h  outputprinter.cpp  outputprinter.h  unix_color.h
